--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -1,41 +1,71 @@
 {% load static %}
+
 <header>
   <nav class="navbar navbar-light" style="background-color: lightskyblue">
     <div class="container">
+
       <a class="navbar-brand" href="{% url 'blog:index' %}">
-        <img src="{% static 'img/logo.png' %}" width="30" height="30" class="d-inline-block align-top" alt="">
+        <img src="{% static 'img/logo.png' %}" width="30" height="30"
+             class="d-inline-block align-top" alt="">
         Блогикум
       </a>
+
       {% with request.resolver_match.view_name as view_name %}
-        <ul class="nav  nav-pills">
-          <li class="nav-item">
-            <a class="nav-link {% if view_name == 'pages:about' %} text-white {% endif %}" href="{% url 'pages:about' %}">
-              О проекте
+      <ul class="nav nav-pills align-items-center">
+
+        <li class="nav-item">
+          <a class="nav-link {% if view_name == 'pages:about' %}text-white{% endif %}"
+             href="{% url 'pages:about' %}">
+            О проекте
+          </a>
+        </li>
+
+        <li class="nav-item">
+          <a class="nav-link {% if view_name == 'pages:rules' %}text-white{% endif %}"
+             href="{% url 'pages:rules' %}">
+            Правила
+          </a>
+        </li>
+
+        {% if user.is_authenticated %}
+          <li class="nav-item ms-2">
+            <a class="btn btn-outline-primary"
+               href="{% url 'blog:create_post' %}">
+              Написать пост
             </a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link {% if view_name == 'pages:rules' %} text-white {% endif %}" href="{% url 'pages:rules' %}">
-              Правила
+
+          <li class="nav-item ms-2">
+            <a class="btn btn-outline-primary"
+               href="{% url 'users:profile' user.username %}">
+              {{ user.username }}
             </a>
           </li>
-          {% if user.is_authenticated %}
-            <div class="btn-group" role="group" aria-label="Basic outlined example">
-              <button type="button" class="btn btn-outline-primary"><a class="text-decoration-none text-reset"
-                  href="{% url 'blog:create_post' %}">Написать пост</a></button>
-              <button type="button" class="btn btn-outline-primary"><a class="text-decoration-none text-reset"
-                  href="{% url 'blog:profile' user.username %}">{{ user.username }}</a></button>
-              <button type="button" class="btn btn-outline-primary"><a class="text-decoration-none text-reset"
-                  href="{% url 'logout' %}">Выйти</a></button>
-            </div>
-          {% else %}
-            <div class="btn-group" role="group" aria-label="Basic outlined example">
-              <button type="button" class="btn btn-outline-primary"><a class="text-decoration-none text-reset"
-                  href="{% url 'login' %}">Войти</a></button>
-              <button type="button" class="btn btn-outline-primary"><a class="text-decoration-none text-reset"
-                  href="{% url 'registration' %}">Регистрация</a></button>
-            </div>
-          {% endif %}
-        </ul>
+
+          <li class="nav-item ms-2">
+            <form action="{% url 'logout' %}" method="post" class="d-inline">
+              {% csrf_token %}
+              <button type="submit" class="btn btn-outline-primary">
+                Выйти
+              </button>
+            </form>
+          </li>
+
+        {% else %}
+          <li class="nav-item ms-2">
+            <a class="btn btn-outline-primary" href="{% url 'login' %}">
+              Войти
+            </a>
+          </li>
+
+          <li class="nav-item ms-2">
+            <a class="btn btn-outline-primary" href="{% url 'registration' %}">
+              Регистрация
+            </a>
+          </li>
+        {% endif %}
+
+      </ul>
       {% endwith %}
     </div>
   </nav>
